--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,20 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".View.MainActivity"/>
+        tools:context=".View.MainActivity">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="413dp"
+            android:layout_height="61dp"
+            android:layout_marginStart="1dp"
+            android:layout_marginBottom="2dp"
+            app:itemIconTint="@color/draw_items"
+            app:itemTextColor="@color/draw_items"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/menu_items" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </layout>
