--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <FrameLayout
+        android:id="@+id/frame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".View.MainActivity">
+        android:layout_height="668dp"
+        android:layout_marginBottom="1dp" />
 
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:layout_width="413dp"
-            android:layout_height="61dp"
-            android:layout_marginStart="1dp"
-            android:layout_marginBottom="2dp"
-            app:itemIconTint="@color/draw_items"
-            app:itemTextColor="@color/draw_items"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/menu_items" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomnavigation"
+        android:layout_width="411dp"
+        android:layout_height="61dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="2dp"
+        app:itemIconTint="@color/draw_items"
+        app:itemTextColor="@color/draw_items"
 
 
-</layout>
+        app:menu="@menu/menu_items" />
+
+
+</LinearLayout>
