--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,9 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginStart="38dp"
-            android:layout_marginTop="50dp"
-            android:layout_marginEnd="38dp"
+            android:layout_marginTop="20dp"
             app:cardCornerRadius="25dp"
             app:cardElevation="10dp"
             app:cardUseCompatPadding="true">
@@ -33,6 +31,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -85,7 +84,7 @@
                     android:background="@color/white"
                     android:gravity="center"
                     android:orientation="vertical"
-                    android:padding="25dp">
+                    android:padding="16dp">
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
@@ -244,24 +243,23 @@
                     android:textSize="20dp"
                     android:textColor="@color/black"/>
                 <LinearLayout
-                    android:layout_marginTop="10dp"
-                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
                     android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_gravity="center"
                     android:orientation="horizontal">
                     <ImageView
-                        android:layout_marginLeft="48dp"
+                        android:layout_margin="10dp"
                         android:src="@drawable/ic_face"
                         android:layout_width="45dp"
                         android:layout_height="45dp"/>
                     <ImageView
-
-                        android:layout_marginLeft="30dp"
+                        android:layout_margin="10dp"
                         android:src="@drawable/ic_gg"
                         android:layout_width="45dp"
                         android:layout_height="45dp"/>
                     <ImageView
-
-                        android:layout_marginLeft="30dp"
+                        android:layout_margin="10dp"
                         android:src="@drawable/ic_ig"
                         android:layout_width="45dp"
                         android:layout_height="45dp"/>
