--- a/app/src/main/res/drawable/switch_trcks.xml
+++ b/app/src/main/res/drawable/switch_trcks.xml
@@ -2,7 +2,7 @@
 <shape
     android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#F41436"/>
+    <solid android:color="#F18A69"/>
     <corners android:radius="50dp"/>
     <stroke android:width="2dp" android:color="#F41436"/>
 
