--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
             android:layout_marginTop="40dp"
             android:gravity="center"
             android:text="Double Talk"
-            android:textColor="#4A6826"
+            android:textColor="#E38A6E"
             android:textSize="30dp"
             android:textStyle="bold|normal|italic" />
 
@@ -140,7 +140,7 @@
                         android:text="Forgot Password ?"
                         android:layout_gravity="end"
                         android:textStyle="normal"
-                        android:textColor="#2FB7F4"
+                        android:textColor="#F38B6B"
                         android:textSize="11dp" />
                     <Button
                         android:id="@+id/signin"
@@ -151,7 +151,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_gravity="center"
                         app:shapeAppearanceOverlay="@style/Button5"
-                        android:backgroundTint="#42ABB8"
+                        android:backgroundTint="#F38B6B"
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"/>
 
@@ -244,7 +244,7 @@
                         android:layout_marginTop="20dp"
                         android:layout_gravity="center"
                         app:shapeAppearanceOverlay="@style/Button5"
-                        android:backgroundTint="#42ABB8"
+                        android:backgroundTint="#F38B6B"
                         android:layout_width="130dp"
                         android:layout_height="wrap_content"/>
 
@@ -270,18 +270,22 @@
                         android:src="@drawable/ic_face"
                         android:layout_width="45dp"
                         android:layout_height="45dp"/>
-                    <ImageView
-
-                        android:layout_marginLeft="30dp"
-                        android:src="@drawable/ic_gg"
+                    <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="45dp"
-                        android:layout_height="45dp"/>
-                    <ImageView
-
-                        android:layout_marginLeft="30dp"
-                        android:src="@drawable/ic_ig"
+                        android:layout_height="45dp"
+                        android:layout_marginLeft="33dp"
+                        app:shapeAppearanceOverlay="@style/circleImage"
+                        app:strokeWidth="1dp"
+                        app:strokeColor="@color/white"
+                        android:src="@drawable/ic_gg"/>
+                    <com.google.android.material.imageview.ShapeableImageView
                         android:layout_width="45dp"
-                        android:layout_height="45dp"/>
+                        android:layout_height="45dp"
+                        app:shapeAppearanceOverlay="@style/circleImage"
+                        app:strokeWidth="1dp"
+                        android:layout_marginLeft="33dp"
+                        app:strokeColor="@color/white"
+                        android:src="@drawable/ic_ig"/>
                 </LinearLayout>
 
             </LinearLayout>
