--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -25,7 +25,7 @@
                 android:text="Header" />
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/textViewChatName"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
