--- a/app/src/main/res/layout/item_all_chat.xml
+++ b/app/src/main/res/layout/item_all_chat.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
-        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/bgr_bottom_line"
         android:orientation="horizontal">
 
         <!--        <ImageView-->
@@ -22,7 +22,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textViewName"
+                android:id="@+id/tvName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -32,7 +32,7 @@
                 android:text="TextView" />
 
             <TextView
-                android:id="@+id/textViewMessage"
+                android:id="@+id/tvMessage"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ellipsize="end"
@@ -44,7 +44,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/textViewUpdatedAt"
+            android:id="@+id/tvUpdatedAt"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
