--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -36,6 +36,12 @@
           android:textSize="20sp"
           />
 
+      <Button
+          android:id="@+id/logout"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:text="Log Out" />
+
    </LinearLayout>
 
 </ScrollView>
