--- a/app/src/main/res/layout/fragment_all_chat.xml
+++ b/app/src/main/res/layout/fragment_all_chat.xml
@@ -10,14 +10,15 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="40dp">
+
         <TextView
             android:id="@+id/txtSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:drawableLeft="@drawable/icons8_search_30"
+            android:gravity="center_vertical"
             android:hint="Tìm kiếm"
-            android:textSize="20sp"
-            android:gravity="center_vertical"/>
+            android:textSize="20sp" />
     </RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
