--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,16 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="parent">
         <item name="android:layout_width">344dp</item>
         <item name="android:layout_height">48dp</item>
     </style>
+
     <style name="modifiedEditText" parent="parent">
         <item name="android:textSize">@dimen/newsMoreTextSize</item>
 
         <item name="android:backgroundTint">#FFFFFF</item>
     </style>
+
     <style name="circleImage">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="ConstraintLayout">
+        <item name="android:background">@drawable/background_gradient</item>
+    </style>
+
+    <style name="BtnStyle">
+        <item name="android:background">@drawable/border</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="TextViewSend">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
 </resources>
